# RayTracer

./: BVHNode.cpp  BVHNode.h  BoundingBox.cpp  BoundingBox.h  Box.cpp  Box.h  CMakeLists.txt  Camera.cpp  Camera.h  CheckerTexture.cpp  CheckerTexture.h  Dialectric.cpp  Dialectric.h  DiffuseLight.cpp  DiffuseLight.h  ImageTexture.cpp  ImageTexture.h  Lambert.cpp  Lambert.h  Material.cpp  Material.h  MathUtils.h  Metal.cpp  Metal.h  MovingSphere.cpp  MovingSphere.h  NoiseTexture.cpp  NoiseTexture.h  NormalFlipper.cpp  NormalFlipper.h  Perlin.cpp  Perlin.h  PhysicalObject.cpp  PhysicalObject.h  PhysicalObjectList.cpp  PhysicalObjectList.h  Ray.cpp  Ray.h  RayTracerCore.cpp  RayTracerCore.h  (+14 more)
RayTracer/: RayTracer.sln
RayTracer/RayTracer/: RayTracer.vcxproj  RayTracer.vcxproj.filters  image.ppm
